spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spark
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      role: master
  template:
    metadata:
      labels:
        app: spark
        role: master
    spec:
      containers:
      - env:
        - name: SPARK_MASTER_HOST
          value: spark-master
        - name: SPARK_MASTER_PORT
          value: '7077'
        image: localhost:5000/my-spark-app:latest
        name: spark-master
        ports:
        - containerPort: 7077
        - containerPort: 8080
