spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spark
  name: spark-master
spec:
  ports:
  - name: spark
    port: 7077
    protocol: TCP
    targetPort: 7077
  - name: ui
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spark
    role: master
  type: ClusterIP
