spark-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spark-network
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: spark
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 7077
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: spark
  policyTypes:
  - Ingress
  - Egress
